create endpoint, action and model to get gallery images
