# public/swagger.json
@@ -182,6 +182,40 @@
           }
         }
       }
-    }
+    },
+    "/site/gallery": {
+      "get": {
+        "summary": "Get all images",
+        "security": [
+          { "bearerAuth": [] }
+        ],
+        "tags": ["Site"],
+        "responses": {
+          "200": {
+            "description": "List of images",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": { "type": "string" },
+                      "description": { "type": "string" },
+                      "image_path": { "type": "string" },
+                      "image_id": { "type": "string" },
+                      "type": { "type": "string" }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    }    
   }
 }
